# gameSeoTool

./: .env.example  .gitignore  README.md  pyproject.toml
api/: index.py
config/: sites.example.json
design/: keyword_search.md
desing/: design.md
src/gameseotools/: __init__.py  ai.py  cli.py  config.py  db.py  http.py  keywords.py  lifecycle.py  models.py  notify.py  reporting.py  scoring.py  sitemap.py  trends.py  web.py
tests/: test_db.py  test_keywords.py  test_lifecycle.py  test_scoring.py
