[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gameseotools"
version = "0.1.0"
description = "MVP game SEO trend monitor for sitemap-based seed discovery and trend alerting."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
gameseo = "gameseotools.cli:main"
gameseo-web = "gameseotools.web:main"

[tool.setuptools.packages.find]
where = ["src"]
